--- a/6.CHATBOT/6.3 seq2seq.ipynb
+++ b/6.CHATBOT/6.3 seq2seq.ipynb
@@ -26,6 +26,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SEED_NUM = 1234\n",
+    "tf.random.set_seed(SEED_NUM)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -626,7 +636,7 @@
     "if not(os.path.isdir(PATH)):\n",
     "        os.makedirs(os.path.join(PATH))\n",
     "        \n",
-    "checkpoint_path = DATA_OUT_PATH + MODEL_NAME + '/weights.{epoch:02d}-{val_accuracy:.2f}.h5'\n",
+    "checkpoint_path = DATA_OUT_PATH + MODEL_NAME + '/weights.h5'\n",
     "    \n",
     "cp_callback = ModelCheckpoint(\n",
     "    checkpoint_path, monitor='val_accuracy', verbose=1, save_best_only=True, save_weights_only=True)\n",
@@ -651,7 +661,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SAVE_FILE_NM = \"weights.30-0.85.h5\"\n",
+    "SAVE_FILE_NM = \"weights.h5\"\n",
     "model.load_weights(os.path.join(DATA_OUT_PATH, MODEL_NAME, SAVE_FILE_NM))"
    ]
   },
@@ -702,7 +712,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
