--- a/6.CHATBOT/6.3 seq2seq.ipynb
+++ b/6.CHATBOT/6.3 seq2seq.ipynb
@@ -139,8 +139,7 @@
    "outputs": [],
    "source": [
     "MODEL_NAME = 'seq2seq_kor'\n",
-    "BATCH_SIZE = 3\n",
-    "#BATCH_SIZE = 64\n",
+    "BATCH_SIZE = 2\n",
     "MAX_SEQUENCE = 25\n",
     "EPOCH = 30\n",
     "UNITS = 1024\n",
@@ -193,10 +192,6 @@
     "        output, state = self.gru(x, initial_state = hidden)\n",
     "        return output, state\n",
     "\n",
-    "#     def initialize_hidden_state(self, batch_sz=None):\n",
-    "#         if batch_sz is None:\n",
-    "#             batch_sz = self.batch_sz\n",
-    "#         return tf.zeros((batch_sz, self.enc_units))\n",
     "    def initialize_hidden_state(self, inp):\n",
     "        return tf.zeros((tf.shape(inp)[0], self.enc_units))"
    ]
@@ -494,13 +489,7 @@
       "15/18 [========================>.....] - ETA: 0s - loss: 0.0854 - accuracy: 0.9167\n",
       "Epoch 00024: val_accuracy improved from 0.91565 to 0.91800, saving model to ./data_out/seq2seq_kor/weights.h5\n",
       "18/18 [==============================] - 7s 363ms/sample - loss: 0.0872 - accuracy: 0.9169 - val_loss: 0.1249 - val_accuracy: 0.9180\n",
-      "Epoch 25/30\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 25/30\n",
       "15/18 [========================>.....] - ETA: 0s - loss: 0.0696 - accuracy: 0.9191\n",
       "Epoch 00025: val_accuracy improved from 0.91800 to 0.92040, saving model to ./data_out/seq2seq_kor/weights.h5\n",
       "18/18 [==============================] - 6s 361ms/sample - loss: 0.0727 - accuracy: 0.9193 - val_loss: 0.1350 - val_accuracy: 0.9204\n",
@@ -539,14 +528,6 @@
     "\n",
     "earlystop_callback = EarlyStopping(monitor='val_accuracy', min_delta=0.0001, patience=1)\n",
     "\n",
-    "# history = model.fit([index_inputs, index_outputs], index_targets,\n",
-    "#                     batch_size=BATCH_SIZE, epochs=EPOCH,\n",
-    "#                     validation_split=VALIDATION_SPLIT, callbacks=[earlystop_callback, cp_callback])\n",
-    "# history = model.fit(dataset, epochs=EPOCH, steps_per_epoch=steps_per_epoch)\n",
-    "#history = model.fit(dataset, epochs=EPOCH, steps_per_epoch=steps_per_epoch)\n",
-    "# history = model.fit(train_dataset, epochs=EPOCH, steps_per_epoch=steps_per_epochs, validation_data=eval_dataset, \n",
-    "#                    callbacks=[earlystop_callback, cp_callback])\n",
-    "# history = model.fit(train_dataset, epochs=EPOCH, validation_data=eval_dataset, callbacks=[cp_callback])\n",
     "history = model.fit([index_inputs, index_outputs], index_targets,\n",
     "                    batch_size=BATCH_SIZE, epochs=EPOCH,\n",
     "                    validation_split=VALIDATION_SPLIT, callbacks=[earlystop_callback, cp_callback])"
